--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,7 +3,7 @@
     <p><strong>Name:</strong></p>
     <p><%= @artist.name %></p>
     <br>
-    <p><strong>Image:</strong></p>
+    <p><strong>Picture:</strong></p>
     <p><%= image_tag(@artist.picture) %></p>
     <br>
   </div>
