--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,25 +1,25 @@
 <tr>
-  <td><%= link_to favorite.track.name, track_path(favorite.track) %></td>
-  <td><%= favorite.track.duration %></td>
-  <td><%= favorite.track.genre.name %></td>
-  <td><%= link_to favorite.track.artist.name, artist_path(favorite.track.artist) %></td>
-  <td><%= link_to favorite.track.album.name, album_path(favorite.track.album) %></td>
-  <td><%= favorite.track.album.year %></td>
-  <td>
-  <div class="btn-group">
-<%- unless current_user.favorite_tracks.exists?(id: favorite.track.id) -%>
-<%= link_to favorite_tracks_path(track_id: favorite.track), method: :post, class: 'btn btn-sm btn-primary' do %>
-<i class="glyphicon glyphicon-heart-empty"></i>&nbsp;
-<% end %>
-<%- else -%>
-<%= link_to favorite_track_path(favorite.track), method: :delete, class: 'btn btn-sm btn-primary' do %>
-<i class="glyphicon glyphicon-heart"></i>&nbsp;
-<% end %>
-<%- end -%>
-<%= link_to favorite.track.youtubelink, class: 'btn btn-sm btn-primary', target: :_blank do %>
-<i class="glyphicon glyphicon-play"></i>&nbsp;
-<% end %>
+  <td data-title="Name"><%= link_to favorite.track.name, track_path(favorite.track) %></td>
+  <td data-title="Duration"><%= favorite.track.duration %></td>
+  <td data-title="Genre"><%= favorite.track.genre.name %></td>
+  <td data-title="Artist"><%= link_to favorite.track.artist.name, artist_path(favorite.track.artist) %></td>
+  <td data-title="Album"><%= link_to favorite.track.album.name, album_path(favorite.track.album) %></td>
+  <td data-title="Year"><%= favorite.track.album.year %></td>
+  <td data-title="Actions">
+  	<div class="btn-group">
+			<% unless current_user.favorite_tracks.exists?(id: favorite.track.id) %>
+				<%= link_to favorite_tracks_path(track_id: favorite.track), method: :post, class: 'btn btn-sm btn-primary' do %>
+					<i class="glyphicon glyphicon-heart-empty"></i>&nbsp;
+				<% end %>
+				<% else %>
+					<%= link_to favorite_track_path(favorite.track), method: :delete, class: 'btn btn-sm btn-primary' do %>
+					<i class="glyphicon glyphicon-heart"></i>&nbsp;
+				<% end %>
+			<% end %>
+			<%= link_to favorite.track.youtubelink, class: 'btn btn-sm btn-primary', target: :_blank do %>
+				<i class="glyphicon glyphicon-play"></i>&nbsp;
+			<% end %>
     </div>
   </td>
-</tr>
+</div>
 
