--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,12 +1,19 @@
-<div class="row">
-  <div class="col-md-6">
-    <p><strong>Name:</strong></p>
+<div class="section">
+  <div class="col-md-9">
+    <p><strong>Genre:</strong></p>
     <p><%= @genre.name %></p>
     <br>
-  </div>
-</div>
-<h3>Tracks</h3>
-   <table class="table table-hover">
+    <h1> Tracks </h1>
+    <hr>
+
+    <% unless flash[:notice].blank? %>
+      <div class="alert alert-success">
+        <p><%= flash[:notice] %></p>
+      </div>
+    <% end %>
+
+	<div class="table-responsive-vertical">
+		<table class="table table-hover">
       <thead>
         <tr>
           <th>Name</th>
@@ -22,4 +29,6 @@
         <%= render @tracks %>
       </tbody>
     </table>
+  </div>
+</div>
 
