--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -1,6 +1,6 @@
 <tr>
-  <td><%= link_to playlist.name, playlist_path(playlist) %></td>
-  <td>
+  <td data-title="Name"><%= link_to playlist.name, playlist_path(playlist) %></td>
+  <td data-title="Actions">
   <div class="btn-group">
     <%= link_to 'Edit', edit_playlist_path(playlist), class: 'btn btn-sm btn-primary' %>
     <%= link_to 'Delete', playlist_path(playlist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
