--- a/app/views/superadmin/tracks/show.html.erb
+++ b/app/views/superadmin/tracks/show.html.erb
@@ -3,6 +3,15 @@
     <p><strong>Name:</strong></p>
     <p><%= @track.name %></p>
     <br>
+    <p><strong>Duration:</strong></p>
+    <p><%= @track.duration %></p>
+    <br>
+    <p><strong>Artist:</strong></p>
+    <p><%= @track.artist.name %></p>
+    <br>
+    <p><strong>Album:</strong></p>
+    <p><%= @track.album.name %></p>
+    <br>
     <p><strong>Year:</strong></p>
     <p><%= @track.album.year %></p>
     <br>
