--- a/app/views/admin/albums/index.html.erb
+++ b/app/views/admin/albums/index.html.erb
@@ -1,8 +1,6 @@
-<h1>Admin</h1>
-<div class="row">
+<div class="section">
   <div class="col-md-7">
     <h1>Albums <%= link_to 'Create new', new_admin_album_path, class: 'btn btn-success' %></h1>
-    <%= count_for @albums, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -11,21 +9,22 @@
       </div>
     <% end %>
 
-    <h3>Album details</h3>
+    <div class="table-responsive-vertical">
+      <table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Year</th>
+          	<th>Artist</th>
+          	<th>Genre</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @albums %>
+      	</tbody>
+    	</table>
+    </div>
     <%= will_paginate @albums, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Year</th>
-          <th>Artist</th>
-          <th>Genre</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @albums %>
-      </tbody>
-    </table>
   </div>
 </div>
