--- a/app/views/admin/artists/_artist.html.erb
+++ b/app/views/admin/artists/_artist.html.erb
@@ -1,15 +1,14 @@
 <tr>
-  <td><%= link_to artist.name, admin_artist_path(artist) %></td>
-  <td>
-  <div class="btn-group">
-    <% if artist.user_id == current_user.id %>
-    <%= link_to 'Edit', edit_admin_artist_path(artist), class: 'btn btn-sm btn-primary' %>
-    <%= link_to 'Delete', admin_artist_path(artist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
-    </div>
-    <% else %>
-    <%= link_to 'Edit', edit_admin_artist_path(artist), class: 'btn btn-sm btn-primary disabled' %>
+  <td data-title="Name"><%= link_to artist.name, admin_artist_path(artist) %></td>
+  <td data-title="Actions">
+  	<div class="btn-group">
+    	<% if artist.user_id == current_user.id %>
+    		<%= link_to 'Edit', edit_admin_artist_path(artist), class: 'btn btn-sm btn-primary' %>
+    		<%= link_to 'Delete', admin_artist_path(artist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
+    	<% else %>
+    		<%= link_to 'Edit', edit_admin_artist_path(artist), class: 'btn btn-sm btn-primary disabled' %>
         <%= link_to 'Delete', admin_artist_path(artist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger disabled' %>
+      <% end %>
     </div>
-    <% end %>
   </td>
 </tr>
