--- a/app/views/admin/artists/index.html.erb
+++ b/app/views/admin/artists/index.html.erb
@@ -1,8 +1,6 @@
-<h1>Admin</h1>
-<div class="row">
+<div class="section">
   <div class="col-md-7">
     <h1>Artists <%= link_to 'Create new', new_admin_artist_path, class: 'btn btn-success' %></h1>
-    <%= count_for @artists, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -11,17 +9,19 @@
       </div>
     <% end %>
 
-    <h3>Artist details</h3>
+    <div class="table-responsive-vertical">
+      <table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @artists %>
+      	</tbody>
+    	</table>
+    </div>
     <%= will_paginate @artists, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @artists %>
-      </tbody>
-    </table>
   </div>
 </div>
