--- a/app/views/admin/tracks/_track.html.erb
+++ b/app/views/admin/tracks/_track.html.erb
@@ -1,18 +1,18 @@
 <tr>
-  <td><%= link_to track.name, admin_track_path(track) %></td>
-  <td><%= track.duration %></td>
-  <td><%= track.genre.name %></td>
-  <td><%= track.artist.name %></td>
-  <td><%= track.album.name %></td>
-  <td>
-  <div class="btn-group">
-  <% if track.user_id == current_user.id %>
-    <%= link_to 'Edit', edit_admin_track_path(track), class: 'btn btn-sm btn-primary' %>
-    <%= link_to 'Delete', admin_track_path(track), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
-    <% else %>
-    <%= link_to 'Edit', edit_admin_track_path(track), class: 'btn btn-sm btn-primary disabled' %>
-    <%= link_to 'Delete', admin_track_path(track), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger disabled' %>
-    <% end %>
-    </div>
+  <td data-title="Name"><%= link_to track.name, admin_track_path(track) %></td>
+  <td data-title="Duration"><%= track.duration %></td>
+  <td data-title="Genre"><%= track.genre.name %></td>
+  <td data-title="Artist"><%= track.artist.name %></td>
+  <td data-title="Album"><%= track.album.name %></td>
+  <td data-title="Actions">
+  	<div class="btn-group">
+  		<% if track.user_id == current_user.id %>
+    		<%= link_to 'Edit', edit_admin_track_path(track), class: 'btn btn-sm btn-primary' %>
+    		<%= link_to 'Delete', admin_track_path(track), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
+    	<% else %>
+    		<%= link_to 'Edit', edit_admin_track_path(track), class: 'btn btn-sm btn-primary disabled' %>
+    		<%= link_to 'Delete', admin_track_path(track), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger disabled' %>
+    	<% end %>
+   </div>
   </td>
 </tr>
