--- a/app/views/admin/tracks/index.html.erb
+++ b/app/views/admin/tracks/index.html.erb
@@ -1,8 +1,6 @@
-<h1>Admin</h1>
-<div class="row">
-  <div class="col-md-7">
+<div class="section">
+  <div class="col-md-9">
     <h1> Tracks <%= link_to 'Create new', new_admin_track_path, class: 'btn btn-success' %></h1>
-    <%= count_for @tracks, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -10,23 +8,24 @@
         <p><%= flash[:notice] %></p>
       </div>
     <% end %>
-
-    <h3>Tracks details</h3>
-    <%= will_paginate @tracks, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Duration</th>
-          <th>Genre</th>
-          <th>Artist</th>
-          <th>Album</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @tracks %>
-      </tbody>
-    </table>
-  </div>
+    
+		<div class="table-responsive-vertical">
+    	<table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Duration</th>
+          	<th>Genre</th>
+          	<th>Artist</th>
+          	<th>Album</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @tracks %>
+      	</tbody>
+    	</table>
+  	</div>
+  	<%= will_paginate @tracks, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
