--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,6 +1,7 @@
-<div class="row">
+<div class="section">
   <div class="col-md-7">
     <h1>Albums</h1>
+    <hr>
 
     <% unless flash[:notice].blank? %>
       <div class="alert alert-success">
@@ -8,19 +9,21 @@
       </div>
     <% end %>
     
-		<%= will_paginate @albums, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Year</th>
-          <th>Artist</th>
-          <th>Genre</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @albums %>
-      </tbody>
-    </table>
-  </div>
+    <div class="table-responsive-vertical">
+   		<table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Year</th>
+          	<th>Artist</th>
+          	<th>Genre</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @albums %>
+      	</tbody>
+    	</table>
+  	</div>
+ 	  <%= will_paginate @albums, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
