--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="section">
+  <div class="col-md-9">
     <p><strong>Name:</strong></p>
     <p><%= @album.name %></p>
     <br>
@@ -10,22 +10,24 @@
     <p><%= image_tag(@album.cover)%></p>
     <br>
     <p><strong>Tracks:</strong></p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Duration</th>
-          <th>Genre</th>
-          <th>Artist</th>
-          <th>Album</th>
-          <th>Year</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @album.tracks  %>
-      </tbody>
-    </table>
+    <div class="table-responsive-vertical">
+      <table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Duration</th>
+          	<th>Genre</th>
+          	<th>Artist</th>
+          	<th>Album</th>
+          	<th>Year</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @album.tracks  %>
+      	</tbody>
+    	</table>
+    </div>
   </div>
 </div>
 
