--- a/app/views/artists/_artist.html.erb
+++ b/app/views/artists/_artist.html.erb
@@ -1,3 +1,3 @@
 <tr>
-  <td><%= link_to artist.name, artist_path(artist) %></td>
+  <td data-title="Name"><%= link_to artist.name, artist_path(artist) %></td>
 </tr>
