--- a/app/views/artists/_top_track.html.erb
+++ b/app/views/artists/_top_track.html.erb
@@ -1,27 +1,28 @@
 <tr>
-  <td><%= link_to top_track.track.name, track_path(top_track.track) %></td>
-  <td><%= top_track.track.duration %></td>
-  <td><%= top_track.track.genre.name %></td>
-  <td><%= link_to top_track.track.artist.name, artist_path(top_track.track.artist) %></td>
-  <td><%= link_to top_track.track.album.name, album_path(top_track.track.album) %></td>
-  <td><%= top_track.track.album.year %></td>
-  <td>
-  <div class="btn-group">
-<% unless current_user.favorite_tracks.exists?(id: top_track.track.id) %>
-<%= link_to favorite_tracks_path(track_id: top_track.track), method: :post, class: 'btn btn-sm btn-primary' do %>
-<i class="glyphicon glyphicon-heart-empty"></i>&nbsp;
-<% end %>
-<% else %>
-<%= link_to favorite_track_path(top_track.track), method: :delete, class: 'btn btn-sm btn-primary' do %>
-<i class="glyphicon glyphicon-heart"></i>&nbsp;
-<% end %>
-<% end %>
-<%= link_to top_track.track.youtubelink, class: 'btn btn-sm btn-primary', target: :_blank do %>
-<i class="glyphicon glyphicon-play"></i>&nbsp;
-<% end %>
-
-<a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-sm btn-primary" href="#addTrackDialog">Add to playlist:</a>
-
-<div class="modal fade" id="addTrackDialog">
-<%= render 'modal' %>
+  <td data-title="Name"><%= link_to top_track.track.name, track_path(top_track.track) %></td>
+  <td data-title="Duration"><%= top_track.track.duration %></td>
+  <td data-title="Genre"><%= top_track.track.genre.name %></td>
+  <td data-title="Artist"><%= link_to top_track.track.artist.name, artist_path(top_track.track.artist) %></td>
+  <td data-title="Album"><%= link_to top_track.track.album.name, album_path(top_track.track.album) %></td>
+  <td data-title="Year"><%= top_track.track.album.year %></td>
+  <td data-title="Actions">
+  	<div class="btn-group">
+			<% unless current_user.favorite_tracks.exists?(id: top_track.track.id) %>
+				<%= link_to favorite_tracks_path(track_id: top_track.track), method: :post, class: 'btn btn-sm btn-primary' do %>
+					<i class="glyphicon glyphicon-heart-empty"></i>&nbsp;
+				<% end %>
+				<% else %>
+					<%= link_to favorite_track_path(top_track.track), method: :delete, class: 'btn btn-sm btn-primary' do %>
+					<i class="glyphicon glyphicon-heart"></i>&nbsp;
+				<% end %>
+			<% end %>
+			<%= link_to top_track.track.youtubelink, class: 'btn btn-sm btn-primary', target: :_blank do %>
+				<i class="glyphicon glyphicon-play"></i>&nbsp;
+			<% end %>
+			<a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-sm btn-primary" href="#addTrackDialog">Add to playlist:</a>
+			<div class="modal fade" id="addTrackDialog">
+				<%= render 'shared/modal' %>
+			</div>
+		</div>
+	</td>
 </div>
