--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,23 +1,20 @@
-<div class="row">
-  <div class="col-md-7">
+<div class="section">
+  <div class="col-md-4">
     <h1>Artists</h1>
+    <hr>
 
     <% unless flash[:notice].blank? %>
       <div class="alert alert-success">
         <p><%= flash[:notice] %></p>
       </div>
     <% end %>
-    
-    <%= will_paginate @albums, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @artists %>
-      </tbody>
-    </table>
-  </div>
+    <div class="table-responsive-vertical">
+    	<table class="table table-hover">
+      	<tbody>
+        	<%= render @artists %>
+      	</tbody>
+    	</table>
+  	</div>
+  	<%= will_paginate @artists, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
