--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,22 +1,32 @@
-<div class="row">
-  <div class="col-md-7">
+<div class="section">
+  <div class="col-md-9">
     <h1> Favorite tracks </h1>
     <hr>
-<%= will_paginate @favorites, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Duration</th>
-          <th>Genre</th>
-          <th>Artist</th>
-          <th>Album</th>
-          <th>Year</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @favorites %>
-      </tbody>
-    </table>
+
+    <% unless flash[:notice].blank? %>
+      <div class="alert alert-success">
+        <p><%= flash[:notice] %></p>
+      </div>
+    <% end %>
+    
+    <div class="table-responsive-vertical">
+    	<table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Duration</th>
+          	<th>Genre</th>
+          	<th>Artist</th>
+          	<th>Album</th>
+          	<th>Year</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @favorites %>
+      	</tbody>
+    	</table>
+  	</div>
+  	<%= will_paginate @favorites, renderer: BootstrapPagination::Rails %>
   </div>
+</div>
