--- a/app/views/genres/_genre.html.erb
+++ b/app/views/genres/_genre.html.erb
@@ -1,3 +1,3 @@
 <tr>
-  <td><%= link_to genre.name, genre_path(genre) %></td>
+  <td data-title="Name"><%= link_to genre.name, genre_path(genre) %></td>
 </tr>
