--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -8,22 +8,13 @@
         <p><%= flash[:notice] %></p>
       </div>
     <% end %>
-
-		<div class="table-responsive-vertical tbl-header">
-     <table cellpadding="0" cellspacing="0" border="0">
-      <thead>	
-        <tr>
-          <th>Name</th>
-        </tr>
-      </thead>
-      </table>
-      </div>
-      <div class="tbl-content">
-   	 <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <%= render @genres %>
-      </tbody>
-    </table>
-  </div>
+		
+		<div class="table-responsive-vertical">
+			<table class="table table-hover">
+      	<tbody>
+        	<%= render @genres %>
+      	</tbody>
+    	</table>
+  	</div>
   </div>
 </div>
