--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,67 +2,60 @@
 <html>
   <head>
     <title>LOVE MUSIC</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    	<%= csrf_meta_tags %>
+    	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-                <a class="navbar-brand" href="index.html">
-                    <img src="http://www.iconsdb.com/icons/preview/white/note-xxl.png" style="height: 25px" alt="">
-                </a>
-</a> 
+		<nav class="navbar-custom navbar-inverse navbar-fixed-top">
+  		<div class="container-fluid">
+    		<div class="navbar-header">
+      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        	<span class="sr-only">Toggle navigation</span>
+        	<span class="icon-bar"></span>
+        	<span class="icon-bar"></span>
+        	<span class="icon-bar"></span>
+      		</button>
+      		<a class="navbar-brand" href="#">
+      		<img src="http://www.iconsdb.com/icons/preview/white/note-xxl.png" style="height: 25px" alt="">
+      		</a>
+    		</div>
 
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="<%= 'active' if params[:action] == 'tracks' %>"><%= link_to 'Tracks', admin_tracks_path %></li>
-        <li class="<%= 'active' if params[:action] == 'artists' %>"><%= link_to 'Artists', admin_artists_path %></li>
-        <li class="<%= 'active' if params[:action] == 'albums' %>"><%= link_to 'Albums', admin_albums_path %></li>
-        <li class="<%= 'active' if params[:action] == 'genres' %>"><%= link_to 'Genres', admin_genres_path %></li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <%= form_tag(tracks_path, method: 'get', class: 'navbar-form navbar-right') do %>
- 			 	<%= search_field_tag 'term', nil, class: 'form-control', placeholder: 'Search'  %>
-  			<%= submit_tag "Submit", class: 'btn btn-default', :name => nil %>
-				<% end %>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %><span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% if current_user.admin? %>
-            <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
-            <% end %>
-            <li role="separator" class="divider"></li>
-            <% if current_user.superadmin? %>
-            <li><%= link_to 'Dashboard', superadmin_dashboard_path %></li>
-            <% end %>
-            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
-          </ul>
-        </li>
-        <% else %>
-       		<li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-      <%= yield %>
-    </div>
+    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      	<ul class="nav navbar-nav">
+        	<li><%= link_to 'Tracks', admin_tracks_path %></li>
+        	<li><%= link_to 'Artists', admin_artists_path %></li>
+        	<li><%= link_to 'Albums', admin_albums_path %></li>
+        	<li><%= link_to 'Genres', admin_genres_path %></li>
+      	</ul>
+      	<form class="navbar-form navbar-left">
+        	<%= form_tag(tracks_path, method: 'get', class: 'navbar-form navbar-right') do %>
+ 			 			<%= search_field_tag 'term', nil, class: 'form-control', placeholder: 'Search'  %>
+  					<%= submit_tag "Submit", class: 'btn btn-default', :name => nil %>
+					<% end %>
+      	</form>
+      		<ul class="nav navbar-nav navbar-right">
+        	<% if logged_in? %>
+        		<li class="dropdown">
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %><span class="caret"></span></a>
+          	<ul class="dropdown-menu">
+            	<% if current_user.admin? %>
+            		<li><%= link_to 'Dashboard', admin_dashboard_path %></li>
+            	<% end %>
+            	<% if current_user.superadmin? %>
+            		<li><%= link_to 'Dashboard', superadmin_dashboard_path %></li>
+            	<% end %>
+            	  <li role="separator" class="divider"></li>
+            		<li><%= link_to 'Logout', logout_path, method: :delete %></li>
+        			<% else %>
+       					<li><%= link_to "Log in", login_path %></li>
+       			  <% end %>
+       			</ul>
+      		</ul>
+    		</div>
+ 			</div>
+    </nav>
+    <%= yield %>
   </body>
 </html>
