--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,7 +1,6 @@
-<div class="row">
+<div class="section">
   <div class="col-md-7">
     <h1>Playlists <%= link_to 'Create new', new_playlist_path, class: 'btn btn-success' %></h1>
-    <%= count_for @playlists, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -10,17 +9,13 @@
       </div>
     <% end %>
 
-    <h3>Playlist details</h3>
-    <%= will_paginate @playlists, renderer: BootstrapPagination::Rails %>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @playlists %>
-      </tbody>
-    </table>
-  </div>
+    <div class="table-responsive-vertical">
+    	<table class="table table-hover">
+      	<tbody>
+        	<%= render @playlists %>
+      	</tbody>
+    	</table>
+  	</div>
+  	<%= will_paginate @playlists, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
