--- a/app/views/superadmin/artists/show.html.erb
+++ b/app/views/superadmin/artists/show.html.erb
@@ -1,11 +1,27 @@
-<div class="row">
+<div class="section">
   <div class="col-md-6">
     <p><strong>Name:</strong></p>
     <p><%= @artist.name %></p>
     <br>
-    <p><strong>Cover:</strong></p>
+    <p><strong>Picture:</strong></p>
     <p><%=image_tag(@artist.picture)%></p>
     <br>
+    <p><strong>Albums:</strong></p>
+		<div class="table-responsive-vertical">
+      <table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Year</th>
+          	<th>Artist</th>
+          	<th>Genre</th>
+          	<th>Actions</th>
+      	</thead>
+      	<tbody>
+        	<%= render @artist.albums  %>
+      	</tbody>
+    	</table>
+    </div>
   </div>
 </div>
 
