--- a/app/views/superadmin/genres/index.html.erb
+++ b/app/views/superadmin/genres/index.html.erb
@@ -1,8 +1,6 @@
-<h1>SuperAdmin</h1>
-<div class="row">
-  <div class="col-md-7">
+<div class="section">
+  <div class="col-md-5">
     <h1>Genres <%= link_to 'Create new', new_superadmin_genre_path, class: 'btn btn-success' %></h1>
-    <%= count_for @genres, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -11,16 +9,18 @@
       </div>
     <% end %>
 
-    <h3>Genre details</h3>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @genres %>
-      </tbody>
-    </table>
+		<div class="table-responsive-vertical">
+      <table class="table table-hover">
+      	<thead>
+        	<tr>
+          	<th>Name</th>
+          	<th>Actions</th>
+        	</tr>
+      	</thead>
+      	<tbody>
+        	<%= render @genres %>
+     	  </tbody>
+    	</table>
+    </div>
   </div>
 </div>
