--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="row">
   <div class="col-md-9">
     <p><strong>Name:</strong></p>
     <p><%= @album.name %></p>
