--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="row">
   <div class="col-md-7">
     <h1>Playlists <%= link_to 'Create new', new_playlist_path, class: 'btn btn-success' %></h1>
     <hr>
