--- a/app/views/superadmin/tracks/index.html.erb
+++ b/app/views/superadmin/tracks/index.html.erb
@@ -18,6 +18,7 @@
           	<th>Genre</th>
           	<th>Artist</th>
           	<th>Album</th>
+          	<th>Year</th>
           	<th>Actions</th>
         	</tr>
       	</thead>
