--- a/app/views/superadmin/tracks/show.html.erb
+++ b/app/views/superadmin/tracks/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="section">
   <div class="col-md-6">
     <p><strong>Name:</strong></p>
     <p><%= @track.name %></p>
