--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -8,6 +8,8 @@
     <br>
   </div>
 </div>
+<%-# radi lokalno -%>
+<% if false %>
 <h3>Top tracks</h3>
    <table class="table table-hover">
       <thead>
@@ -25,4 +27,5 @@
         <%= render @top_tracks %>
       </tbody>
     </table>
+<% end %>
 
